# python_notebook

./: pyproject.toml
initial_project_name/: install_notebook.py  run_notebooks.py
