[tool.poetry]
name = "initial_project_name"
version = "0.1.0"
description = "A wee python project"
authors = ["Matt Maher <matt@maher-family.net>"]
readme = "README.md"

[tool.poetry.dependencies]
jupyterlab = "^4.3.1"
notebook = "^7.2.2"
python = "^3.9"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
numpy = "^1.24.0"
pandas = "^2.0.0"
plotly = "^5.18.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"

[tool.poetry.scripts]
run = "initial_project_name.run_notebooks:main"
install_notebook = "initial_project_name.install_notebook:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
